--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -155,49 +155,73 @@ section{
   background: var(--primaryblue);
 }
 
-.contra_wrap{
 
-}
 
-.header_section{
-  nav{
+.top-nav{
+  @media (max-width: $mobile-landscape){
+    flex-direction: column;
+    padding-top: 2px;
+  }
+  .nav-box{
+    padding: 32px 24px;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    vertical-align: middle;
     align-items: center;
-    padding: 60px 24px 20px 24px;
     @media (max-width: $mobile-landscape){
       flex-direction: column;
-      padding-top: 24px;
+      padding: 12px 24px;
     }
-    .brand{
-      display: block;
-      .logo{
-        height: 58px;
-      }
+  }
+  .brand{
+    display: block;
+    .logo{
+      height: 58px;
     }
-    .buttons{
-      @media (max-width: $mobile-landscape){
-        margin-top: 24px;
-      }
-      li{
-        line-height: 0;
-      }
-      .btn-tw{
-        display: flex;
-        color: $white;
-        border: 1px solid rgba(255,255,255,.7);
-        padding: 18px 24px;
-        font-size: 18px;
-        line-height: 18px;
-        border-radius: 28px;
+  }
+  .buttons{
+    display: flex;
 
-        img{
-          margin-left: 8px;
-          height: 18px;
-        }
-        &:hover{
-          background: darken($blue, 5%);
-        }
+    @media (max-width: $mobile-landscape){
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+    }
+    li{
+      line-height: 0;
+    }
+    .btn-social{
+      line-height: 0;
+      border: .5px solid rgba(0, 147, 237, .3);
+      display: inline-block;
+      padding: 4px 12px;
+      border-radius: 10px;
+      margin-left: 16px;
+      @media (max-width: $mobile-landscape){
+        margin-top: 12px;
+      }
+      img{
+        height: 36px;
+      }
+      &:hover{
+        background: rgba(0,147,237, .1);
+      }
+    }
+    .btn-tw{
+      display: flex;
+      color: var(--primaryblue);
+      font-size: 18px;
+      line-height: 18px;
+      border-radius: 28px;
+
+      img{
+        margin-left: 8px;
+        height: 18px;
+
+      }
+      &:hover{
+        opacity: .8;
       }
     }
   }
@@ -211,12 +235,13 @@ section{
     padding-top: 100px;
     @media (max-width: $mobile-landscape){
       padding-top: 0;
+      text-align: center;
     }
     .hero_img{
       position: absolute;
       top: 0px;
       right: 0px;
-
+      text-align: center;
       @media (max-width: $tablet-wide){
         width: 100%;
       }
@@ -225,6 +250,7 @@ section{
       }
       @media (max-width: $mobile-landscape){
         width: 100%;
+        right: 0;
         position: relative;
         text-align: center;
         margin-top: 0;
@@ -236,7 +262,7 @@ section{
           width: 400px;
         }
         @media (max-width: $mobile-landscape){
-          width: 200px;
+          width: 90%;
 
         }
       }
@@ -779,7 +805,6 @@ section{
 
 
 .mode-toggle{
-  margin-left: 22px;
   input[type=checkbox]{
     width: 38px;
     height: 20px;
