--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -652,7 +652,7 @@ section{
     }
   }
   &.btn-coffee{
-    background: var(--nativewhite);
+    background: var(--darkbg);
 
     border:1px solid $blue;
     padding: 22px;
